# sysc4806project

./: .gitignore  Cargo.toml  Procfile  README.md  Rocket.example.toml  Rocket.toml
.circleci/: config.yml
migrations/2022-03-06-034923_create_research_fields/: down.sql  up.sql
migrations/2022-03-06-045548_create_professors/: down.sql  up.sql
migrations/2022-03-06-050442_create_professor_research_fields/: down.sql  up.sql
migrations/2022-03-06-050915_create_applicants/: up.sql
migrations/2022-03-06-053122_create_student_applied_to/: down.sql  up.sql
migrations/2022-03-22-200307_student_applied_to_status/: down.sql  up.sql
migrations/2022-03-23-044119_db_file_storage/: down.sql  up.sql
migrations/2022-04-05-212914_add_login_information/: down.sql  up.sql
migrations/2022-04-09-023503_cascade_professor_delete/: down.sql  up.sql
src/: buckets.rs  db.rs  email.rs  html.rs  main.rs  models.rs  request_guards.rs  rest.rs  schema.rs
templates/: index.html.tera  layout.html.tera  prof_new.html.tera  prof_select.html.tera  selection_layout.html.tera  show.html.tera  student_select.html.tera
