[package]
name = "sysc4806_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
diesel = "1.4.8"
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.56"
chrono = "0.4"
bcrypt = "0.12"
rand_chacha = "0.3.1"
base64 = "0.13.0"
lettre = "0.10.0-rc.5"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
